plugins {
    id 'java'
    id 'org.triton4j.codegen'
}

group = 'io.dscope.samples'
version = '0.1.0'

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    runtimeOnly project(':')
    implementation group: 'oracle.code', name: 'triton', version: '1.0-SNAPSHOT'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.addAll(['--add-modules', 'jdk.incubator.code'])
}

tritonCodegen {
    inputs.setFrom(files(
            rootProject.file('tutorials_python/01-vector-add.py'),
            rootProject.file('tutorials_python/02-fused-softmax.py'),
            rootProject.file('tutorials_python/03-matrix-multiplication.py'),
            rootProject.file('tutorials_python/04-low-memory-dropout.py'),
            rootProject.file('tutorials_python/05-layer-norm.py'),
            rootProject.file('tutorials_python/07-extern-functions.py'),
            rootProject.file('tutorials_python/08-grouped-gemm.py')
    ))
    outputDir.set(layout.buildDirectory.dir('generated-triton-java'))
    packageName.set('org.triton4j.samples.generated')
    language.set('tl')
    continueOnError.set(true)
    verbose.set(false)
}

tasks.register('compileGeneratedTritonJava', JavaCompile) {
    group = 'build'
    description = 'Compile Java sources generated by generateTritonJava.'
    dependsOn tasks.named('generateTritonJava')

    def generatedDir = layout.buildDirectory.dir('generated-triton-java')
    source = fileTree(generatedDir) {
        include '**/*.java'
    }
    classpath = sourceSets.main.runtimeClasspath
    destinationDirectory = layout.buildDirectory.dir('classes/generated-triton-java')
    options.compilerArgs.addAll(['--add-modules', 'jdk.incubator.code'])
}

tasks.named('build') {
    dependsOn tasks.named('compileGeneratedTritonJava')
}
